# Masterblog-core

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
models/: blog.py  post.py
src/blog/models/: blog.py
src/blog/storage/: sequence.py
src/masterblog/: app.py
src/masterblog/models/: blog.py  post.py
src/masterblog/storage/: sequence.py
src/masterblog_core/: __init__.py  app.py
src/masterblog_core/models/: blog.py
src/myapp/: app.py  config.py
src/myapp/models/: blog.py  post.py
src/myapp/storage/: sequence.py
static/: style.css
storage/: __init__.py  filestore.py
templates/: 404.html  add.html  base.html  form.html  index.html  post.html  show.html  update.html
