[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "masterblog-core"
version = "0.1.0"
dependencies = [
    "Flask"
]
description = "A blog application with JSON storage (core only)"

[tool.setuptools.packages.find]
where = ["src"]
include = ["masterblog*"]

[tool.setuptools.package-dir]
"" = "src"